--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,12 +9,176 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    .overlay { background: rgba(0, 0, 0, 0.6); }
+    body {
+      font-family: 'Nunito', sans-serif;
+    }
+    .overlay {
+      background: rgba(0, 0, 0, 0.6);
+    }
+    .counter {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #60a5fa;
+    }
   </style>
 </head>
+
 <body class="text-gray-100 bg-gray-900">
-  <!-- Your full HTML content will go here. This is a placeholder. -->
-  <h1 class="text-center text-3xl mt-20">Template Setup Complete</h1>
+  <!-- Navbar -->
+  <header class="fixed w-full z-50">
+    <nav class="bg-gray-900 bg-opacity-80 backdrop-blur-md p-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold">AAA Sparkling</h1>
+      <div class="space-x-6 hidden md:flex">
+        <a href="#services" class="hover:text-blue-400 transition">Services</a>
+        <a href="#about" class="hover:text-blue-400 transition">About</a>
+        <a href="#why-us" class="hover:text-blue-400 transition">Why Us</a>
+        <a href="#pricing" class="hover:text-blue-400 transition">Pricing</a>
+        <a href="#testimonials" class="hover:text-blue-400 transition">Testimonials</a>
+        <a href="#contact" class="hover:text-blue-400 transition">Contact</a>
+      </div>
+      <button id="menu-btn" class="md:hidden text-white text-2xl">
+        <i class="fas fa-bars"></i>
+      </button>
+      <div id="mobile-menu" class="md:hidden hidden flex-col space-y-4 mt-4">
+        <a href="#services" class="hover:text-blue-400 transition">Services</a>
+        <a href="#about" class="hover:text-blue-400 transition">About</a>
+        <a href="#why-us" class="hover:text-blue-400 transition">Why Us</a>
+        <a href="#pricing" class="hover:text-blue-400 transition">Pricing</a>
+        <a href="#testimonials" class="hover:text-blue-400 transition">Testimonials</a>
+        <a href="#contact" class="hover:text-blue-400 transition">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <section class="relative h-screen flex items-center justify-center">
+    <video class="absolute top-0 left-0 w-full h-full object-cover z-0" autoplay muted loop>
+      <source src="https://cdn.coverr.co/videos/coverr-cleaning-the-desk-8992/1080p.mp4" type="video/mp4">
+    </video>
+    <div class="overlay absolute w-full h-full z-10"></div>
+    <div class="z-20 text-center px-4" data-aos="fade-up">
+      <h2 class="text-4xl md:text-6xl font-bold mb-4">Professional Cleaning Services</h2>
+      <p class="text-xl mb-6">We keep your space spotless and shining</p>
+      <a href="#contact" class="bg-blue-600 px-6 py-3 rounded-lg hover:bg-blue-700 transition">Book a Cleaning</a>
+    </div>
+  </section>
+
+  <!-- Counter Section -->
+  <section class="py-12 bg-gray-800" data-aos="zoom-in">
+    <div class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
+      <div>
+        <div class="counter" data-target="120">0</div>
+        <p>Homes Cleaned</p>
+      </div>
+      <div>
+        <div class="counter" data-target="75">0</div>
+        <p>Offices Serviced</p>
+      </div>
+      <div>
+        <div class="counter" data-target="50">0</div>
+        <p>Staff Members</p>
+      </div>
+      <div>
+        <div class="counter" data-target="100">0</div>
+        <p>Satisfied Clients</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Pricing Section -->
+  <section id="pricing" class="py-16 px-4" data-aos="fade-up">
+    <h2 class="text-3xl font-bold text-center mb-10">Our Pricing</h2>
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="bg-gray-800 p-6 rounded-lg text-center">
+        <h3 class="text-xl font-semibold mb-2">Basic</h3>
+        <p class="text-blue-400 text-2xl font-bold mb-4">₦5,000</p>
+        <ul class="space-y-2 mb-6">
+          <li>1 Bedroom Cleaning</li>
+          <li>1 Bathroom</li>
+          <li>Basic Dusting & Vacuum</li>
+        </ul>
+        <button class="bg-blue-600 px-6 py-2 rounded hover:bg-blue-700">Choose</button>
+      </div>
+      <div class="bg-gray-800 p-6 rounded-lg text-center">
+        <h3 class="text-xl font-semibold mb-2">Standard</h3>
+        <p class="text-blue-400 text-2xl font-bold mb-4">₦10,000</p>
+        <ul class="space-y-2 mb-6">
+          <li>2 Bedroom + Kitchen</li>
+          <li>2 Bathrooms</li>
+          <li>Vacuum, Mopping & Dusting</li>
+        </ul>
+        <button class="bg-blue-600 px-6 py-2 rounded hover:bg-blue-700">Choose</button>
+      </div>
+      <div class="bg-gray-800 p-6 rounded-lg text-center">
+        <h3 class="text-xl font-semibold mb-2">Premium</h3>
+        <p class="text-blue-400 text-2xl font-bold mb-4">₦20,000</p>
+        <ul class="space-y-2 mb-6">
+          <li>Entire Apartment or Office</li>
+          <li>Deep Cleaning</li>
+          <li>All Equipment & Supplies</li>
+        </ul>
+        <button class="bg-blue-600 px-6 py-2 rounded hover:bg-blue-700">Choose</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Google Map & WhatsApp -->
+  <section class="py-16 px-4 bg-gray-900" data-aos="fade-up">
+    <h2 class="text-3xl font-bold text-center mb-6">Find Us or Chat</h2>
+    <div class="flex flex-col md:flex-row justify-between items-center gap-6">
+      <iframe class="w-full md:w-1/2 h-64 rounded" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3939.933378628018!2d7.493875215253617!3d9.072264793493995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0a6a06c9bd8b%3A0x4d8e40f21fa291b6!2sAbuja!5e0!3m2!1sen!2sng!4v1686848300192!5m2!1sen!2sng" allowfullscreen="" loading="lazy"></iframe>
+      <a href="https://wa.me/2347078552120" class="bg-green-500 px-6 py-3 rounded text-white hover:bg-green-600">Chat on WhatsApp</a>
+    </div>
+  </section>
+
+  <footer class="bg-gray-900 py-6 text-center">
+    <div class="flex justify-center mb-4 space-x-4">
+      <a href="#" class="text-white hover:text-blue-400"><i class="fab fa-facebook"></i></a>
+      <a href="#" class="text-white hover:text-blue-400"><i class="fab fa-twitter"></i></a>
+      <a href="#" class="text-white hover:text-blue-400"><i class="fab fa-instagram"></i></a>
+      <a href="https://wa.me/2347078552120" class="text-white hover:text-blue-400"><i class="fab fa-whatsapp"></i></a>
+    </div>
+    <p class="text-sm">&copy; 2025 AAA Sparkling Cleaning Service. All rights reserved.</p>
+  </footer>
+
+  <script>
+    AOS.init({
+      duration: 800,
+      easing: 'ease-in-out'
+    });
+
+    const btn = document.getElementById("menu-btn");
+    const menu = document.getElementById("mobile-menu");
+    btn.addEventListener("click", () => menu.classList.toggle("hidden"));
+
+    const counters = document.querySelectorAll('.counter');
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          const counter = entry.target;
+          const update = () => {
+            const target = +counter.getAttribute('data-target');
+            const count = +counter.innerText;
+            const speed = 20;
+            const increment = Math.ceil(target / speed);
+            if (count < target) {
+              counter.innerText = count + increment;
+              setTimeout(update, 50);
+            } else {
+              counter.innerText = target;
+            }
+          };
+          update();
+          observer.unobserve(counter);
+        }
+      });
+    }, { threshold: 1 });
+
+    counters.forEach(counter => observer.observe(counter));
+  </script>
 </body>
-</html>
+
+  </html>
+          
