--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
       font-weight: bold;
       color: #60a5fa;
     }
+    .mobile-menu-enter {
+      opacity: 0;
+      transform: translateX(100%);
+    }
+    .mobile-menu-enter-active {
+      opacity: 1;
+      transform: translateX(0);
+      transition: all 0.3s ease-in-out;
+    }
   </style>
 </head>
 
@@ -33,23 +42,25 @@
       <div class="space-x-6 hidden md:flex">
         <a href="#services" class="hover:text-blue-400 transition">Services</a>
         <a href="#about" class="hover:text-blue-400 transition">About</a>
-        <a href="#why-us" class="hover:text-blue-400 transition">Why Us</a>
+        <a href="#work" class="hover:text-blue-400 transition">Work</a>
+        <a href="#equipment" class="hover:text-blue-400 transition">Equipment</a>
         <a href="#pricing" class="hover:text-blue-400 transition">Pricing</a>
-        <a href="#testimonials" class="hover:text-blue-400 transition">Testimonials</a>
+        <a href="#testimonial" class="hover:text-blue-400 transition">Testimonial</a>
         <a href="#contact" class="hover:text-blue-400 transition">Contact</a>
       </div>
       <button id="menu-btn" class="md:hidden text-white text-2xl">
-        <i class="fas fa-bars"></i>
+        <i id="menu-icon" class="fas fa-bars"></i>
       </button>
-      <div id="mobile-menu" class="md:hidden hidden flex-col space-y-4 mt-4">
-        <a href="#services" class="hover:text-blue-400 transition">Services</a>
-        <a href="#about" class="hover:text-blue-400 transition">About</a>
-        <a href="#why-us" class="hover:text-blue-400 transition">Why Us</a>
-        <a href="#pricing" class="hover:text-blue-400 transition">Pricing</a>
-        <a href="#testimonials" class="hover:text-blue-400 transition">Testimonials</a>
-        <a href="#contact" class="hover:text-blue-400 transition">Contact</a>
-      </div>
     </nav>
+    <div id="mobile-menu" class="md:hidden hidden absolute top-full right-0 flex flex-col items-start p-4 bg-gray-900 w-2/3 space-y-4 transition duration-300 ease-in-out shadow-lg z-40 mobile-menu-enter">
+      <a href="#services" class="hover:text-blue-400 transition">Services</a>
+      <a href="#about" class="hover:text-blue-400 transition">About</a>
+      <a href="#work" class="hover:text-blue-400 transition">Work</a>
+      <a href="#equipment" class="hover:text-blue-400 transition">Equipment</a>
+      <a href="#pricing" class="hover:text-blue-400 transition">Pricing</a>
+      <a href="#testimonials" class="hover:text-blue-400 transition">Testimonials</a>
+      <a href="#contact" class="hover:text-blue-400 transition">Contact</a>
+    </div>
   </header>
 
   <!-- Hero -->
@@ -62,6 +73,28 @@
       <h2 class="text-4xl md:text-6xl font-bold mb-4">Professional Cleaning Services</h2>
       <p class="text-xl mb-6">We keep your space spotless and shining</p>
       <a href="#contact" class="bg-blue-600 px-6 py-3 rounded-lg hover:bg-blue-700 transition">Book a Cleaning</a>
+    </div>
+  </section>
+
+    <!-- Services Section -->
+  <section id="services" class="py-16 px-4 bg-gray-800" data-aos="fade-up">
+    <h2 class="text-3xl font-bold text-center mb-10">Our Services</h2>
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="text-center" data-aos="fade-left">
+        <i class="fas fa-home text-4xl text-blue-400 mb-4"></i>
+        <h3 class="text-xl font-semibold mb-2">Residential Cleaning</h3>
+        <p>Thorough cleaning for your home with care and professionalism.</p>
+      </div>
+      <div class="text-center" data-aos="fade-right">
+        <i class="fas fa-building text-4xl text-blue-400 mb-4"></i>
+        <h3 class="text-xl font-semibold mb-2">Commercial Cleaning</h3>
+        <p>Keep your office or workspace clean and welcoming to all.</p>
+      </div>
+      <div class="text-center" data-aos="fade-up">
+        <i class="fas fa-broom text-4xl text-blue-400 mb-4"></i>
+        <h3 class="text-xl font-semibold mb-2">Deep Cleaning</h3>
+        <p>Detailed deep cleaning for carpets, upholstery, and hard-to-reach areas.</p>
+      </div>
     </div>
   </section>
 
@@ -83,6 +116,46 @@
       <div>
         <div class="counter" data-target="100">0</div>
         <p>Satisfied Clients</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Section-->
+  <section id="about" class="py-16 px-4 bg-gray-900" data-aos="fade-up">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-3xl font-bold mb-6">About Us</h2>
+      <p class="text-lg text-gray-300">At AAA Sparkling Cleaning Service, we are dedicated to providing top-tier cleaning solutions that leave a lasting impression. With a team of experienced professionals and state-of-the-art equipment, we specialize in both residential and commercial cleaning tailored to meet the needs of our clients. Your satisfaction is our top priority, and we strive to make every space shine like new.</p>
+    </div>
+  </section>
+  
+  <!-- Work Section -->
+  <section id="work" class="py-16 px-4" data-aos="fade-up">
+    <h2 class="text-3xl font-bold text-center mb-10">Completed Work</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6956" alt="Cleaned Office" class="rounded-lg shadow" data-aos="fade-up">
+      <img src="https://images.unsplash.com/photo-1596900948632-f8989dc7f672" alt="Cleaned Living Room" class="rounded-lg shadow" data-aos="fade-up">
+      <img src="https://images.unsplash.com/photo-1616627987145-60f35c1df875" alt="Cleaned Kitchen" class="rounded-lg shadow" data-aos="fade-up">
+    </div>
+  </section>
+
+  <!-- Equipment Section -->
+  <section id="equipment" class="py-16 px-4 bg-gray-800" data-aos="fade-up">
+    <h2 class="text-3xl font-bold text-center mb-10">Equipment We Use</h2>
+    <div class="grid md:grid-cols-3 gap-6 text-center">
+      <div>
+        <img src="https://images.unsplash.com/photo-1583225151954-68b4b9be4c2f" alt="Vacuum" class="w-full h-48 object-cover rounded mb-4">
+        <h3 class="text-xl font-semibold mb-2">Industrial Vacuum Cleaner</h3>
+        <p>High-power vacuum for deep cleaning floors and carpets.</p>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1586769852836-d2d8117a9c47" alt="Mop" class="w-full h-48 object-cover rounded mb-4">
+        <h3 class="text-xl font-semibold mb-2">Electric Mopping System</h3>
+        <p>Effective mopping system for both tiled and wooden floors.</p>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1608154898172-e4b8e27d58ed" alt="Cleaning Chemicals" class="w-full h-48 object-cover rounded mb-4">
+        <h3 class="text-xl font-semibold mb-2">Safe Cleaning Solutions</h3>
+        <p>Eco-friendly chemicals used for safe disinfection and polishing.</p>
       </div>
     </div>
   </section>
@@ -124,12 +197,27 @@
     </div>
   </section>
 
+  <!-- Testimonials Section -->
+  <section id="testimonials" class="py-16 px-4 bg-gray-800" data-aos="fade-up">
+    <h2 class="text-3xl font-bold text-center mb-10">What Our Clients Say</h2>
+    <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-8">
+      <div class="bg-gray-900 p-6 rounded-lg shadow">
+        <p class="mb-4">"AAA Sparkling transformed my home. It’s spotless and smells amazing. Highly recommend!"</p>
+        <h4 class="font-semibold">– Mrs. Ada, Abuja</h4>
+      </div>
+      <div class="bg-gray-900 p-6 rounded-lg shadow">
+        <p class="mb-4">"Their team was professional, fast, and efficient. Our office looks brand new!"</p>
+        <h4 class="font-semibold">– Mr. Charles, Lekki</h4>
+      </div>
+    </div>
+  </section>
+  
   <!-- Google Map & WhatsApp -->
   <section class="py-16 px-4 bg-gray-900" data-aos="fade-up">
     <h2 class="text-3xl font-bold text-center mb-6">Find Us or Chat</h2>
     <div class="flex flex-col md:flex-row justify-between items-center gap-6">
       <iframe class="w-full md:w-1/2 h-64 rounded" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3939.933378628018!2d7.493875215253617!3d9.072264793493995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0a6a06c9bd8b%3A0x4d8e40f21fa291b6!2sAbuja!5e0!3m2!1sen!2sng!4v1686848300192!5m2!1sen!2sng" allowfullscreen="" loading="lazy"></iframe>
-      <a href="https://wa.me/2347078552120" class="bg-green-500 px-6 py-3 rounded text-white hover:bg-green-600">Chat on WhatsApp</a>
+      <a href="https://wa.me/2349070093751" class="bg-green-500 px-6 py-3 rounded text-white hover:bg-green-600">Chat on WhatsApp</a>
     </div>
   </section>
 
@@ -138,20 +226,32 @@
       <a href="#" class="text-white hover:text-blue-400"><i class="fab fa-facebook"></i></a>
       <a href="#" class="text-white hover:text-blue-400"><i class="fab fa-twitter"></i></a>
       <a href="#" class="text-white hover:text-blue-400"><i class="fab fa-instagram"></i></a>
-      <a href="https://wa.me/2347078552120" class="text-white hover:text-blue-400"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://wa.me/2349070093751" class="text-white hover:text-blue-400"><i class="fab fa-whatsapp"></i></a>
     </div>
+    
     <p class="text-sm">&copy; 2025 AAA Sparkling Cleaning Service. All rights reserved.</p>
   </footer>
+  
 
   <script>
-    AOS.init({
-      duration: 800,
-      easing: 'ease-in-out'
-    });
+    AOS.init({ duration: 800, easing: 'ease-in-out' });
 
     const btn = document.getElementById("menu-btn");
     const menu = document.getElementById("mobile-menu");
-    btn.addEventListener("click", () => menu.classList.toggle("hidden"));
+    const icon = document.getElementById("menu-icon");
+
+    btn.addEventListener("click", () => {
+      menu.classList.toggle("hidden");
+      if (!menu.classList.contains("hidden")) {
+        menu.classList.add("mobile-menu-enter-active");
+        icon.classList.remove("fa-bars");
+        icon.classList.add("fa-times");
+      } else {
+        menu.classList.remove("mobile-menu-enter-active");
+        icon.classList.remove("fa-times");
+        icon.classList.add("fa-bars");
+      }
+    });
 
     const counters = document.querySelectorAll('.counter');
     const observer = new IntersectionObserver(entries => {
@@ -180,5 +280,5 @@
   </script>
 </body>
 
-  </html>
-          
+</html>
+  
