--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
       transform: translateX(0);
       transition: all 0.3s ease-in-out;
     }
+    #mobile-menu {
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  transform: translateX(100%);
+  opacity: 0;
+}
+#mobile-menu.show {
+  transform: translateX(0%);
+  opacity: 1;
+}
+    
   </style>
 </head>
 
