--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 
-<body class="text-gray-100 bg-gray-900">
+<body class="text-gray-100 bg-gray-900 overflow-x-hidden">
   <!-- Navbar -->
   <header class="fixed w-full z-50">
     <nav class="bg-gray-900 bg-opacity-80 backdrop-blur-md p-4 flex justify-between items-center">
