--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="description" content="AAA Sparkling Cleaning Service offers professional residential and commercial cleaning services in Nigeria. Book a cleaning today.">
   <title>AAA Sparkling Cleaning Service</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -42,7 +43,7 @@
 
 <body class="text-gray-100 bg-gray-900 overflow-x-hidden">
   <!-- Navbar -->
-  <header class="fixed w-full z-50">
+  <header class="fixed w-full z-50 top-0 left-0 w-full">
     <nav class="bg-gray-900 bg-opacity-80 backdrop-blur-md p-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold">AAA Sparkling</h1>
       <div class="space-x-6 hidden md:flex">
@@ -58,7 +59,7 @@
         <i id="menu-icon" class="fas fa-bars"></i>
       </button>
     </nav>
-    <div id="mobile-menu" class="md:hidden hidden absolute top-full right-0 flex flex-col items-start p-4 bg-gray-900 w-2/3 space-y-4 transition duration-300 ease-in-out shadow-lg z-40 mobile-menu-enter">
+    <div id="mobile-menu" class="md:hidden absolute top-full right-0 flex flex-col items-start p-4 bg-gray-900 w-2/3 space-y-4 transition duration-300 ease-in-out shadow-lg z-40 mobile-menu-enter">
       <a href="#services" class="hover:text-blue-400 transition">Services</a>
       <a href="#about" class="hover:text-blue-400 transition">About</a>
       <a href="#work" class="hover:text-blue-400 transition">Work</a>
